tests/ui/const-generics/generic_const_exprs/non_local_anon_const_diagnostics.stderr
error[E0308]: mismatched types
  --> $DIR/non_local_anon_const_diagnostics.rs:12:43
   |
LL |     let _: anon_const_non_local::Foo<2> = anon_const_non_local::foo::<M>();
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `2`, found `anon_const_non_local::::foo::{constant#0}`
   |
   = note: expected constant `2`
              found constant `anon_const_non_local::::foo::{constant#0}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
